Fix layout issue

--- a/src/blog.styl
+++ b/src/blog.styl
@@ -196,7 +196,7 @@ template
 +desktop()
     #blog
         .summary-header
-            overflow: auto
+            overflow: hidden
             display: block
 
         .summary-title
@@ -207,10 +207,6 @@ template
             display: inline-block
             float: right
 
-            // Because scroll bars suck (Chrome adds them)
-            margin-top: 2px
-            margin-bottom: 2px
-
             &::before
                 content: ""
                 clear: both
@@ -220,10 +216,12 @@ template
 
             input
                 display: inline-block
-                margin: 0.25em
-                margin-top: 0
+                margin-top: 0.25em
                 padding: 0.5em
                 border: 2px solid $color-border
+
+            .warning:not(.hidden)
+                margin-top: 0.5em
 
         .blog-post
             .post-title
